# google-ads-mcp

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  README.md  noxfile.py  pyproject.toml
ads_mcp/: coordinator.py  gaql_resources.json  gaql_resources.txt  mcp_header_interceptor.py  server.py  update_references.py  utils.py
ads_mcp/tools/: core.py  search.py
tests/: server_test.py  utils_test.py
